--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "react-native": "0.72.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.10",
+    "@types/react": "^18.2.41",
+    "@types/react-test-renderer": "^18.0.7",
+    "typescript": "^5.3.2"
   },
   "private": true
 }
