--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-svg": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +22,7 @@
     "@types/jest": "^29.5.10",
     "@types/react": "^18.2.41",
     "@types/react-test-renderer": "^18.0.7",
+    "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.3.2"
   },
   "private": true
